--- a/tests/Makefile
+++ b/tests/Makefile
@@ -4,7 +4,7 @@ CFLAGS = -Wall -rdynamic
 C_TESTS = $(wildcard src/*.c)
 H_TESTS = $(wildcard src/*.h)
 TESTS = $(C_TESTS) $(H_TESTS)
-OBJECTS = $(subst src,obj,$(patsubst %.c,%.o,$(wildcard ../src/*.c)))
+OBJECTS = $(subst src/dm,obj,$(patsubst %.c,%.o,$(wildcard ../src/dm/*.c)))
 
 bin/tests : $(TESTS) ../lib/lib$(LIB).a
 	gcc $(CFLAGS) $(TESTS) -o bin/tests -I../include -L../lib -l$(LIB) \
@@ -13,7 +13,7 @@ bin/tests : $(TESTS) ../lib/lib$(LIB).a
 ../lib/lib$(LIB).a : $(OBJECTS)
 	ar rcs ../lib/lib$(LIB).a $(OBJECTS)
 
-../obj/%.o : ../src/%.c ../include/%.h
+../obj/%.o : ../src/dm/%.c ../include/dm/%.h
 	gcc $(CFLAGS) -c $< -o $@ -I../include \
 	  -lgc
 
