--- a/tests/Makefile
+++ b/tests/Makefile
@@ -9,7 +9,7 @@ OBJECTS = $(subst src/$(LIB),obj,$(patsubst %.c,%.o,$(wildcard ../src/$(LIB)/*.c
 bin/tests : $(TESTS) ../lib/lib$(LIB).a
 	gcc $(CFLAGS) $(TESTS) -o bin/tests -Iinclude \
 		-I../include -L../lib -l$(LIB) \
-		-lgc -lpthread
+		-lgc -lpthread -lm
 
 ../lib/lib$(LIB).a : $(OBJECTS)
 	ar rcs ../lib/lib$(LIB).a $(OBJECTS)
